--- a/chess/style.css
+++ b/chess/style.css
@@ -37,7 +37,7 @@
     color: white;
     text-align:center; 
     z-index:10;
-    font-family: 'JustLettersMedium'; 
+    font-family: 'HandelGothicTLRegular'; 
     font-weight: normal; 
     font-style: normal; 
     font-size:36px;
