--- a/css/module04.css
+++ b/css/module04.css
@@ -6,14 +6,14 @@
 
 body {
     width: 90%;
-    height: 100vh;
-    background-image: url("../data/images/noah-buscher-x8ZStukS2PM-unsplash.jpg");
+    height: 100vh;    background-image: url("../data/images/noah-buscher-x8ZStukS2PM-unsplash.jpg");
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-color: #40798C;
     margin: 0 auto;
 }
+
 
 h1 {
     text-align: center;
