--- a/templatemo_506_tinker/css/templatemo-style.css
+++ b/templatemo_506_tinker/css/templatemo-style.css
@@ -167,7 +167,7 @@ p {
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
 	background-color: #f7c552;
 }
-bootstrap.min.css:5
+
 .navbar-toggle {
     position: relative;
     float: right;
@@ -254,6 +254,7 @@ bootstrap.min.css:5
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+	color: #fff;
 }
 
 #about .service-item {
@@ -271,7 +272,7 @@ bootstrap.min.css:5
 	background-color: #f7c552;
 }
 
-#about .service-item h4 {
+#about .service-item h4 p{
 	margin-bottom: 30px;
 	margin-top: 45px;
 	font-size: 17px;
@@ -304,8 +305,8 @@ bootstrap.min.css:5
 	padding: 30px 15px 0px 15px;
 }
 
-.filter-categories {;
-  margin-top: 60px;
+.filter-categories {
+  margin-top: 0px;
 }
 
 .filter-categories ul li {
@@ -332,10 +333,10 @@ bootstrap.min.css:5
 }
 
 #portfolio .section-heading {
-	padding-top: 200px;
+	padding-top: 100px;
 	padding-bottom: 200px;
 	background-color: #33c1cf;
-	height: 732px;
+	height: 532px;
 	margin-left: -100vh;
 	padding-left: 100vh;
 }
@@ -365,6 +366,9 @@ bootstrap.min.css:5
 	padding-right: 70px;
 }
 
+#portfolio .thumb {
+	padding: 1em;
+}
 
 #testimonial {
 	background-color: #f7c552;
@@ -416,7 +420,37 @@ bootstrap.min.css:5
   background: #fff;
 }
 
+#assignments{
+	color: white;
+	background-color: black;
+}
 
+#assignments .section-heading .line-dec {
+	width: 270px;
+	height: 1px;
+	background-color: rgba(250, 250, 250, 0.5);
+	margin: 20px 0 15px 0;
+}
+
+#assignments p {
+	color: white;
+}
+
+#personalprojects {
+	color: white;
+	background-color: black;
+}
+
+#personalprojects .section-heading .line-dec {
+	width: 270px;
+	height: 1px;
+	background-color: rgba(250, 250, 250, 0.5);
+	margin: 20px 0 15px 0;
+}
+
+#personalprojects p {
+	color: white;
+}
 
 
 #blog {
@@ -727,7 +761,7 @@ footer .contact-info h4 {
 	color: #fff;
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 
 footer .contact-info ul li {
@@ -754,7 +788,7 @@ footer .connect-us h4 {
 	color: #fff;
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
-	margin-bottom: 35px;
+	margin-bottom: 10px;
 }
 
 footer .connect-us ul li {
@@ -810,7 +844,7 @@ footer .connect-us ul li a:hover {
 	}
 
 	#portfolio .section-heading p {
-		padding: 0px 20px;
+		padding: 0px 10px;
 	}
 
 	.projects-holder {
