--- a/midterm/css/templatemo-style.css
+++ b/midterm/css/templatemo-style.css
@@ -9,7 +9,7 @@ https://templatemo.com/tm-506-tinker
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', arial, sans-serif;
+    font-family: 'PathwayExtremeRegular', arial, sans-serif;
 }
 
 body {
@@ -112,9 +112,18 @@ p {
 .navbar-nav>li {
 	margin-left: 45px;
 }
+.header .navbar-nav>li>a {
+	font-family: 'Roboto', arial, sans-serif;
+	font-size: 13px;
+	font-weight: 300;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+	text-shadow: none;
+	color: #FFF!important;
+}
 
 .header.active .navbar-nav>li>a {
-	font-family: 'Open Sans', arial, sans-serif;
+	font-family: 'Roboto', arial, sans-serif;
 	font-size: 13px;
 	font-weight: 300;
 	letter-spacing: 0.5px;
@@ -130,7 +139,7 @@ p {
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
 }
 .navbar-brand {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 25px;
 	text-transform: uppercase;
 	color: #fff!important;
