initial artifact 04 and module 07 updates

--- a/css/module07.css
+++ b/css/module07.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: #fff;
-  background: url("http://javascriptbook.com/code/c03/multiple-objects.html") no-repeat center center fixed;
+  background: url("../data/images/travelworthy-backdrop.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -14,7 +14,7 @@ body {
   font-family: 'Open Sans', sans-serif;}
 
 h1 {
-  background: #1e1b1e url("http://javascriptbook.com/code/c03/multiple-objects.html") no-repeat;
+  background: #1e1b1e url("../data/images/travelworthy-logo.gif") no-repeat;
   width: 230px;
   height: 180px;
   float: left;
@@ -77,6 +77,9 @@ p + h2 {
 #hotel2 {
   border-bottom: 1px solid #fff; 
   padding-bottom: 1em;}
+#hotel3 {
+    margin-top: 1em;
+    padding-top: 1em;}
 
 #rooms {
   font-size: 440%;
@@ -105,7 +108,7 @@ p + h2 {
   padding: 0 50px 0 50px;
   line-height: 28px;
   text-align: left;
-  background-image: url("http://javascriptbook.com/code/c03/images/check-cross.png");
+  background-image: url("../data/images/check-cross.png");
   background-position: 120px 0;
   background-repeat: no-repeat;}
 
