--- a/css/module08.css
+++ b/css/module08.css
@@ -12,7 +12,7 @@ body {
 	/* Responsive page rules at bottom of style sheet */
 
 h1 {
-	background-image: url(../images/kinglogo.png);
+	background-image: url(http://javascriptbook.com/code/c05/add-element.html);
 	background-repeat: no-repeat;
 	background-position: center center;
 	text-align: center;
@@ -104,6 +104,10 @@ p {
 	margin: 20px auto 20px auto;
 	min-width: 20%; 
 	max-width: 80%; }
+
+#warnspot {
+	color: white;
+};
 
 #scriptResults {
 	padding-bottom: 10px;}
